# SubTrans-Ollama

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_check.py  app.py  checkpoint_check.py  compose.yaml  glossary_check.py  launcher.py  memory_check.py  parallel_check.py  pyproject.toml  quality_check.py  requirements.txt  simple_test.py  structure_check.py
.github/workflows/: ci.yml
data/: glossary.json  jobs.db
docs/: api.md  architecture.md  development.md  troubleshooting.md
samples/: Rick_and_Morty_(2013)_-_S01E01_-_Pilot.eng.SDH.srt  Rick_and_Morty_S01E01_fa.srt  test_sample.srt
src/: config.py  subtitle_engine.py
src/api/: main.py  schemas.py
src/client/: __init__.py  api_client.py
src/evaluation/: __init__.py  database.py  judge.py  models.py  prompts.py
src/glossary/: __init__.py  models.py  service.py
src/jobs/: __init__.py  database.py  models.py
src/memory/: __init__.py  database.py  models.py  service.py
src/providers/: __init__.py  base.py  lmstudio.py  ollama.py  openai_compatible.py
src/subtitles/: __init__.py  models.py
src/translation/: __init__.py  config.py  context.py  engine.py  models.py  prompts.py  validator.py  workers.py
