[project]
name = "SubTrans-Ollama"
version = "0.1.0"
description = "A Streamlit application that translates SRT subtitle files to Persian using Ollama language models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.22.0",
    "ollama>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/mshojaei77/SubTrans-Ollama"
Issues = "https://github.com/mshojaei77/SubTrans-Ollama/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"