[project]
name = "SubTrans-Ollama"
version = "0.1.0"
description = "A Streamlit application that translates SRT subtitle files to Persian using Ollama language models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.22.0",
    "ollama>=0.1.5",
    "openai>=1.0.0",
    "pysubs2>=1.8.1",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
]

[project.urls]
Homepage = "https://github.com/mshojaei77/SubTrans-Ollama"
Issues = "https://github.com/mshojaei77/SubTrans-Ollama/issues"

[project.scripts]
subtitle-translator = "launcher:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
